2006-07-07  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkexpander.xml ("activate"): Add note and link about using
	"notify:expanded" instead of activate. #323403 (Murray Cummings)

	* pygtk-gtkspinbutton.xml (spin): increment defaults to 1.0

	* pygtk-pango-functions.xml 
	* pygtk-pangoattrlist.xml (pango.parse_markup): accel_marker defaults
	to u'\x00 - fix description.

	* pygtk-pangocairo-functions.xml: Fix function names and reorg.

	* pygtk-gtkcellrenderertoggle.xml ("toggled"): path is a string.
	Fixes #334473 (Alexander Konovalenko)

	======== 2.9.0 ============
2006-07-06  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml: Version 2.9.0.

	* pygtk-introduction.xml: Update for PyGTK 2.10

	* pygtk-pangofont.xml (get_font_map): Add.

	* pygtk-pangofontdescription.xml (get_size_is_absolute)
	(set_absolute_size): Add.

	* pygtk-pangoattribute.xml: Add descriptions of new text attributes.

	* pygtk-atk-constants.xml: Add Text constants.

	* pygtk-atkrectangle.xml: Add.

	* pygtk-atk-classes.xml: Add pygtk-atkrectangle.

	* pygtk-atkregistry.xml: 
	* pygtk-atkrelation.xml: 
	* pygtk-atkrelationset.xml: 
	* pygtk-atkselection.xml: 
	* pygtk-atkstateset.xml: 
	* pygtk-atkstreamablecontent.xml: 
	* pygtk-atktable.xml: 
	* pygtk-atktext.xml: 
	* pygtk-atkvalue.xml: Update to PyGTK API.

	* pygtk-atkutil.xml: Remove.

2006-06-27  John Finlay  <finlay@moeraki.com>

	* Add atk docs and new gtk 2.10 class docs.

	* Add links to ancestor properties and signals. Add new GTK 2.10
	classes, methods, functions and constants. Remove unused file
	pygtk-classes.xml

2006-06-22  John Finlay  <finlay@moeraki.com>

	* pygtk-gladexml.xml (set_custom_widget_callbacks): Fix external link.
	(signal_autoconnect): Fix typo.

2006-06-10  John Finlay  <finlay@moeraki.com>

	* pygtk-gobject-constants.xml (Type Constants): Add TYPE_PYOBJECT.

2006-06-06  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkprintjob.xml: Add.

	* pygtk-gtkprintunixdialog.xml: Add.
