@@ -1,5 +1,8 @@
 2006-07-07  John Finlay  <finlay@moeraki.com>
 
+	* pygtk-gtkfilechooser.xml (FileNamesAndEncodings): Add. #327888
+	(Nikos Kouremenos)
+
 	* pygtk-gtkexpander.xml ("activate"): Add note and link about using
 	"notify:expanded" instead of activate. #323403 (Murray Cummings)
 
